--- a/index.html
+++ b/index.html
@@ -2203,23 +2203,37 @@
                                     </button>
                                 </div>
 
-                                <div className="grid grid-cols-2 gap-3">
+                                <div className="grid grid-cols-3 gap-3">
                                     {(Array.isArray(starterTeam) ? starterTeam : [null, null, null, null, null, null]).map((starter, index) => (
                                         <div
                                             key={index}
-                                            className="relative aspect-square bg-gray-50 rounded-lg border-2 border-gray-300 flex items-center justify-center overflow-hidden"
+                                            className="relative bg-gray-50 rounded-lg p-3 border-2 border-gray-200"
                                         >
                                             {starter ? (
-                                                <div className="relative w-full h-full">
+                                                <>
                                                     <img 
                                                         src={starter.spriteUrl} 
                                                         alt={starter.pokemonName}
-                                                        className="w-full h-full object-contain p-2"
+                                                        className="w-20 h-20 mx-auto"
                                                     />
-                                                    <div className="absolute bottom-0 left-0 right-0 bg-gradient-to-t from-black to-transparent p-2">
-                                                        <div className="text-white text-xs font-semibold capitalize text-center">
-                                                            {starter.pokemonName}
-                                                        </div>
+                                                    <div className="text-center text-xs font-semibold capitalize mt-1">
+                                                        {starter.pokemonName}
+                                                    </div>
+                                                    <div className="flex gap-1 justify-center mt-1">
+                                                        <span className={`px-2 py-0.5 rounded text-xs font-bold ${
+                                                            starter.rarity === 'legendary' ? 'bg-yellow-400' :
+                                                            starter.rarity === 'epic' ? 'bg-purple-500 text-white' :
+                                                            starter.rarity === 'rare' ? 'bg-blue-500 text-white' :
+                                                            starter.rarity === 'uncommon' ? 'bg-green-500 text-white' :
+                                                            'bg-gray-400 text-white'
+                                                        }`}>
+                                                            {starter.rarity.toUpperCase()}
+                                                        </span>
+                                                        {starter.isShiny && (
+                                                            <span className="px-2 py-0.5 bg-yellow-300 rounded text-xs font-bold">
+                                                                ✨
+                                                            </span>
+                                                        )}
                                                     </div>
                                                     <button
                                                         onClick={() => removeFromStarters(index)}
@@ -2227,18 +2241,17 @@
                                                     >
                                                         ×
                                                     </button>
-                                                </div>
+                                                </>
                                             ) : (
                                                 <button
                                                     onClick={() => {
                                                         setSelectingForSlot(index);
                                                         setCurrentView('pc');
                                                     }}
-                                                    className="w-full h-full flex flex-col items-center justify-center hover:bg-gray-100 transition"
+                                                    className="w-full h-full flex flex-col items-center justify-center hover:bg-gray-100 transition py-4"
                                                 >
-                                                    <div className="text-4xl opacity-30 mb-2">⚪</div>
-                                                    <div className="text-2xl font-bold text-gray-400">+</div>
-                                                    <div className="text-xs text-gray-400 mt-1">Add Pokémon</div>
+                                                    <div className="text-3xl opacity-30 mb-1">⚪</div>
+                                                    <div className="text-xl font-bold text-gray-400">+</div>
                                                 </button>
                                             )}
                                         </div>
