--- a/index.html
+++ b/index.html
@@ -1057,6 +1057,7 @@
             const [currentView, setCurrentView] = useState('main'); // 'main', 'pc', 'starters'
             const [showDeletePrompt, setShowDeletePrompt] = useState(null); // Pokemon ID to delete
             const [selectingForSlot, setSelectingForSlot] = useState(null); // Which starter slot is being filled
+            const [deleteMode, setDeleteMode] = useState(false); // Delete mode for PC
             
             // 8 evenly-spaced vibrant Pantone-inspired colors (45° apart on color wheel)
             const PROFILE_COLORS = [
@@ -1372,10 +1373,6 @@
                 updatedStarters[slotIndex] = null;
                 setStarterTeam(updatedStarters);
                 await window.storage.set('starter-team', JSON.stringify(updatedStarters));
-            };
-
-            const handleDoubleClick = (entryId) => {
-                setShowDeletePrompt(entryId);
             };
 
             const saveRunHistory = async (newRun) => {
@@ -2114,15 +2111,31 @@
                             <div className="bg-white rounded-2xl shadow-lg p-6 mb-6">
                                 <div className="flex justify-between items-center mb-4">
                                     <h2 className="text-xl font-bold text-gray-800">💾 Bill's PC</h2>
-                                    <button
-                                        onClick={() => {
-                                            setCurrentView('main');
-                                            setSelectingForSlot(null);
-                                        }}
-                                        className="px-4 py-2 bg-gray-800 hover:bg-gray-900 text-white rounded-lg text-sm font-medium transition"
-                                    >
-                                        Back
-                                    </button>
+                                    <div className="flex gap-2">
+                                        <button
+                                            onClick={() => {
+                                                setDeleteMode(!deleteMode);
+                                                setShowDeletePrompt(null);
+                                            }}
+                                            className={`px-4 py-2 rounded-lg text-sm font-medium transition ${
+                                                deleteMode 
+                                                    ? 'bg-red-500 hover:bg-red-600 text-white' 
+                                                    : 'bg-gray-200 hover:bg-gray-300 text-gray-800'
+                                            }`}
+                                        >
+                                            🗑️
+                                        </button>
+                                        <button
+                                            onClick={() => {
+                                                setCurrentView('main');
+                                                setSelectingForSlot(null);
+                                                setDeleteMode(false);
+                                            }}
+                                            className="px-4 py-2 bg-gray-800 hover:bg-gray-900 text-white rounded-lg text-sm font-medium transition"
+                                        >
+                                            Back
+                                        </button>
+                                    </div>
                                 </div>
 
                                 {pokemonPC.length === 0 ? (
@@ -2145,13 +2158,25 @@
                                                 <div
                                                     key={pokemon.id}
                                                     className="relative bg-gray-50 rounded-lg p-3 border-2 border-gray-200"
-                                                    onDoubleClick={() => handleDoubleClick(pokemon.id)}
                                                     onClick={() => {
-                                                        if (selectingForSlot !== null) {
+                                                        if (selectingForSlot !== null && !deleteMode) {
                                                             addToStarters(selectingForSlot, pokemon);
                                                         }
                                                     }}
                                                 >
+                                                    {/* Delete button - bottom left when delete mode active */}
+                                                    {deleteMode && (
+                                                        <button
+                                                            onClick={(e) => {
+                                                                e.stopPropagation();
+                                                                setShowDeletePrompt(pokemon.id);
+                                                            }}
+                                                            className="absolute bottom-2 left-2 w-8 h-8 bg-red-500 hover:bg-red-600 text-white rounded-lg text-lg font-bold shadow-lg z-10"
+                                                        >
+                                                            ×
+                                                        </button>
+                                                    )}
+                                                    
                                                     <div className="text-center text-xs font-semibold capitalize">
                                                         {pokemon.pokemonName}
                                                     </div>
