--- a/index.html
+++ b/index.html
@@ -2793,75 +2793,75 @@
             
             return (
                 <div 
-                    className="absolute inset-0 flex flex-col items-center transition-opacity duration-700"
+                    className="absolute inset-0 transition-opacity duration-700"
                     style={{ 
                         opacity: visible ? 1 : 0,
                         pointerEvents: visible ? 'auto' : 'none'
                     }}
                 >
                     {/* Top section - Rarity icon and Name */}
-                    <div className="flex flex-col items-center gap-2 w-full pt-6">
+                    <div className="absolute top-0 left-0 right-0 flex flex-col items-center gap-2 pt-6">
                         <RarityIcon rarity={encounter.rarity} />
                         <h2 className="text-3xl font-bold text-gray-900">{encounter.pokemonName.toUpperCase()}</h2>
                     </div>
 
-                    {/* Spacer to push content down */}
-                    <div className="flex-1" />
-
-                    {/* Rarity badge - positioned above stats box */}
-                    <div 
-                        className="px-6 py-2 rounded-full text-white font-bold text-sm shadow-lg mb-3"
-                        style={{ 
-                            backgroundColor: rarityColors[encounter.rarity]
-                        }}
-                    >
-                        {encounter.rarity.toUpperCase()}
-                    </div>
-
-                    {/* Bottom section - Workout stats (narrower) */}
-                    <div className="bg-amber-50 rounded-lg p-4 border-4 border-white shadow-lg mb-6" style={{ 
-                        width: '85%',
-                        maxWidth: '400px',
-                        borderColor: '#000',
-                        boxShadow: '0 0 0 4px #fff, 0 0 0 8px #000'
-                    }}>
-                        <div className="grid grid-cols-3 gap-3 text-center">
-                            {workoutData.workoutType === 'lift' ? (
-                                <>
-                                    <div>
-                                        <div className="text-xs font-bold text-gray-600">Duration</div>
-                                        <div className="text-base font-bold text-gray-900">{workoutData.liftDuration || '--'} min</div>
-                                    </div>
-                                    <div>
-                                        <div className="text-xs font-bold text-gray-600">Calories</div>
-                                        <div className="text-base font-bold text-gray-900">{workoutData.caloriesBurned || '--'} kcal</div>
-                                    </div>
-                                    <div>
-                                        <div className="text-xs font-bold text-gray-600">Avg HR</div>
-                                        <div className="text-base font-bold text-gray-900">{workoutData.avgHR || '--'}</div>
-                                    </div>
-                                </>
-                            ) : (
-                                <>
-                                    <div>
-                                        <div className="text-xs font-bold text-gray-600">Avg Pace</div>
-                                        <div className="text-base font-bold text-gray-900">{workoutData.pace || '--'}</div>
-                                        <div className="text-xs text-gray-600">min/mi</div>
-                                    </div>
-                                    <div>
-                                        <div className="text-xs font-bold text-gray-600">Distance</div>
-                                        <div className="text-base font-bold text-gray-900">{workoutData.distance || '--'}</div>
-                                        <div className="text-xs text-gray-600">mi</div>
-                                    </div>
-                                    <div>
-                                        <div className="text-xs font-bold text-gray-600">Duration</div>
-                                        <div className="text-base font-bold text-gray-900">{workoutData.duration || '--'}</div>
-                                    </div>
-                                </>
-                            )}
+                    {/* Bottom section - Rarity badge + Stats box */}
+                    <div className="absolute bottom-0 left-0 right-0 flex flex-col items-center pb-6">
+                        {/* Rarity badge - positioned above stats box */}
+                        <div 
+                            className="px-6 py-2 rounded-full text-white font-bold text-sm shadow-lg mb-3"
+                            style={{ 
+                                backgroundColor: rarityColors[encounter.rarity]
+                            }}
+                        >
+                            {encounter.rarity.toUpperCase()}
                         </div>
-                        <div className="text-xs text-gray-500 text-right mt-2 font-mono">
-                            {new Date().toLocaleString()}
+
+                        {/* Workout stats (narrower) */}
+                        <div className="bg-amber-50 rounded-lg p-4 border-4 border-white shadow-lg" style={{ 
+                            width: '85%',
+                            maxWidth: '400px',
+                            borderColor: '#000',
+                            boxShadow: '0 0 0 4px #fff, 0 0 0 8px #000'
+                        }}>
+                            <div className="grid grid-cols-3 gap-3 text-center">
+                                {workoutData.workoutType === 'lift' ? (
+                                    <>
+                                        <div>
+                                            <div className="text-xs font-bold text-gray-600">Duration</div>
+                                            <div className="text-base font-bold text-gray-900">{workoutData.liftDuration || '--'} min</div>
+                                        </div>
+                                        <div>
+                                            <div className="text-xs font-bold text-gray-600">Calories</div>
+                                            <div className="text-base font-bold text-gray-900">{workoutData.caloriesBurned || '--'} kcal</div>
+                                        </div>
+                                        <div>
+                                            <div className="text-xs font-bold text-gray-600">Avg HR</div>
+                                            <div className="text-base font-bold text-gray-900">{workoutData.avgHR || '--'}</div>
+                                        </div>
+                                    </>
+                                ) : (
+                                    <>
+                                        <div>
+                                            <div className="text-xs font-bold text-gray-600">Avg Pace</div>
+                                            <div className="text-base font-bold text-gray-900">{workoutData.pace || '--'}</div>
+                                            <div className="text-xs text-gray-600">min/mi</div>
+                                        </div>
+                                        <div>
+                                            <div className="text-xs font-bold text-gray-600">Distance</div>
+                                            <div className="text-base font-bold text-gray-900">{workoutData.distance || '--'}</div>
+                                            <div className="text-xs text-gray-600">mi</div>
+                                        </div>
+                                        <div>
+                                            <div className="text-xs font-bold text-gray-600">Duration</div>
+                                            <div className="text-base font-bold text-gray-900">{workoutData.duration || '--'}</div>
+                                        </div>
+                                    </>
+                                )}
+                            </div>
+                            <div className="text-xs text-gray-500 text-right mt-2 font-mono">
+                                {new Date().toLocaleString()}
+                            </div>
                         </div>
                     </div>
                 </div>
